Add a page to view all the trips for a particular route + day.

--- a/busshaming/templates/index.html
+++ b/busshaming/templates/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Bus-shaming</title>
-  </head>
-  <body>
-    <h1>Bus shaming</h1>
-    <form method="post" action="{% url 'fetch_timetable' %}">
-      {% csrf_token %}
-      <input type="submit" value="fetch timetable">
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<h1>Bus shaming</h1>
+<form method="post" action="{% url 'fetch_timetable' %}">
+    {% csrf_token %}
+    <input type="submit" value="fetch timetable">
+</form>
+{% endblock %}
