--- a/client/app/components/Header/styles.less
+++ b/client/app/components/Header/styles.less
@@ -2,16 +2,11 @@
 @import "../../mixins.less";
 
 #main-header {
-  background-color: white;
+  background-color: @darklight1;
   /*border-bottom: 1px solid @lowlight1;*/
   border-bottom: 3px solid @highlight1;
   margin: 0;
 
-  a > h1 {
-    display: inline-block;
-    color: @title-color;
-    margin: 10px 20px;
-  }
   nav {
     .column-width();
   }
