--- a/client/app/variables.less
+++ b/client/app/variables.less
@@ -2,24 +2,16 @@
 @text-font: 'Roboto', sans-serif;
 @easy-reading-font: 'Lora', serif;
 
-@text-color: rgb(78, 78, 81);
+/* Colors */
+@text-color: rgb(78, 78, 100);
 @easy-reading-text-color: #202125;
-@title-color: #202125;
-@header-link-color: @darklight1;
+@header-link-color: white;
 @hint-text-color: lighten(@text-color, 30%);
 
-/*@background-grey: rgb(247, 247, 249);*/
-@background-grey: #F5F5F8;
-.card {
-  background-color: white;
-  border: 1px solid rgb(225, 225, 231);
-  box-shadow: rgb(225, 225, 231) 0px 0px 3px 0px;
-}
-
-@highlight1: rgb(141, 0, 63);
+@highlight1: rgb(217, 100, 39);
 @highlight1-light: lighten(@highlight1, 10%);
 
-@darklight1: #5d606d;
+@darklight1: rgb(35, 48, 100);
 
 @lowlight1: rgb(170, 170, 180);
 
