--- a/client/app/variables.less
+++ b/client/app/variables.less
@@ -8,6 +8,8 @@
 @header-link-color: white;
 @hint-text-color: lighten(@text-color, 30%);
 
+@highlight-text-color: rgb(237, 240, 253);
+
 @highlight1: rgb(217, 100, 39);
 @highlight1-light: lighten(@highlight1, 10%);
 
